syntax = "proto3";

package payment.v1;

// The go_package option specifies the import path for the generated Go code.
option go_package = "github.com/QuanQLee/e-commerce-project/services/Payment/api;api";

service PaymentService {
  rpc CreatePayment (CreatePaymentRequest) returns (PaymentResponse) {
    option (google.api.http) = {
      post: "/v1/payment"
      body: "*"
    };
  }

  rpc Health (HealthRequest) returns (HealthReply) {
    option (google.api.http) = { get: "/v1/health" };
  }
}

message CreatePaymentRequest {
  string  order_id = 1;
  double  amount   = 2;
}

message PaymentResponse {
  string payment_id = 1;
  string status     = 2;
}

message HealthRequest {}
message HealthReply  { string status = 1; }
